--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "5.7",
+    "phpunit/php-code-coverage": "^3",
     "frozzare/wp-test-suite": "1.1.1"
   }
 }
